--- a/.github/workflows/python-coverage.yml
+++ b/.github/workflows/python-coverage.yml
@@ -24,7 +24,7 @@ jobs:
               run: |
                 pip install -r requirements.txt
                 pip install pytest==8.4.1
-                pip instal coverage==7.9
+                pip install coverage==7.9
                 pip install pytest-cov==6.2.1
 
             - name: Install tests and generate coverage repote
